fix: property key align

--- a/src/main/frontend/components/property.css
+++ b/src/main/frontend/components/property.css
@@ -68,7 +68,7 @@
     }
 
     .property-k {
-      @apply inline-block overflow-hidden text-ellipsis whitespace-nowrap leading-[27px];
+      @apply inline-block overflow-hidden text-ellipsis whitespace-nowrap leading-[26px];
 
       .jtrigger {
         &-id {
@@ -274,7 +274,7 @@ a.control-link {
 .property-value-container {
   @apply flex-1 shrink-0;
   min-width: 100px;
-  min-height: 29px;
+  min-height: 28px;
 }
 
 .ls-page-properties .property-key, .ls-properties-area .property-key {
@@ -284,7 +284,7 @@ a.control-link {
 .property-key {
   /* Same height with one-line block container */
   min-width: 160px;
-  min-height: 29px;
+  min-height: 28px;
 
   h1.title, h2.title {
     border-bottom: 0;
@@ -307,16 +307,14 @@ a.control-link {
 }
 
 .property-key-inner {
-  @apply flex flex-row items-start gap-1 relative;
+  @apply flex flex-row items-center gap-1 relative;
 
   .property-icon {
     @apply flex items-center;
-    height: 24px;
-
-    button {
-      margin-top: -1px;
-    }
+    height: 26px;
+    margin-top: 1px;
   }
+
   .editor-inner {
     textarea {
       field-sizing: content;
